# internal/payments/domain/model/valueobjects/quantity.go
@@ -1,0 +1,18 @@
+package valueobjects
+
+import "errors"
+
+type Quantity struct {
+	value int `gorm:"column:quantity"`
+}
+
+func NewQuantity(value int) (Quantity, error) {
+	if value <= 0 {
+		return Quantity{}, errors.New("quantity must be greater than zero")
+	}
+	return Quantity{value: value}, nil
+}
+
+func (q Quantity) Value() int {
+	return q.value
+}
